--- a/src/timer.css
+++ b/src/timer.css
@@ -1,13 +1,18 @@
 button {
   border-radius: 10px;
   background: #282c34;
-  border: 3px solid #1890ff;
+  border: 4px solid #3f51b5;
   font-size: 16px;
-  padding: 10px 24px;
+  padding: 10px 20px;
+  width: 200px;
   color: white;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 h2 {
   font-size: 80px;
+}
+
+body {
+  overflow: hidden;
 }
