--- a/src/InputForm.css
+++ b/src/InputForm.css
@@ -4,8 +4,12 @@
   font-size: 18px;
 }
 
-h1 {
+h1[type="inputform"] {
   color: white;
   font-family: Verdana, sans-serif;
-  font-size: 40px;
+  font-size: 50px;
+}
+
+p[type="inputform"] {
+  font-size: 20px;
 }
