--- a/src/authUser.css
+++ b/src/authUser.css
@@ -1,29 +1,8 @@
-input,
-select,
-textarea {
-  color: black;
-}
-
-textarea:focus,
-input:focus {
-  color: black;
-}
-
-input,
-select,
-textarea {
-  color: black;
-}
-
-textarea:focus,
-input:focus {
-  color: black;
-}
-
 .firebaseui-button {
   margin: 5px 20px 100px 10px;
   font-size: 15px;
   padding: 10px;
+  border: 4px solid #3f51b5;
 }
 
 input {
