--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 .App {
   text-align: center;
+  overflow: auto;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
+  overflow: auto;
 }
 
 .App-header {
@@ -17,10 +19,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  overflow: auto;
 }
 
 .App-link {
   color: #61dafb;
+  overflow: auto;
 }
 
 @keyframes App-logo-spin {
