--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,5 +1,5 @@
 .Profile {
-  background-color: #282c34;
+  /*background-color: #282c34;
   text-align: center;
   min-height: 100vh;
   color: white;
@@ -7,7 +7,15 @@
   flex-direction: column;
   align-items: center;
 
-  font-size: calc(6px + 2vmin);
+  font-size: calc(6px + 2vmin); */
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 h1,
 h3 {
