--- a/src/authUser.css
+++ b/src/authUser.css
@@ -1,4 +1,3 @@
-
 input,
 select,
 textarea {
@@ -14,7 +13,9 @@ input:focus {
   margin: 5px 20px 100px 10px;
   font-size: 15px;
   padding: 10px;
-  border: 4px solid #3f51b5;
+  border: 4px solid #2b3827;
+  background: #3b4b35;
+  color: white;
 }
 
 input {
@@ -29,7 +30,7 @@ h1 {
 
 h2 {
   font-size: 60px;
-  color: white;
+  color: #273e60;
   margin: 0px;
 }
 
@@ -41,4 +42,10 @@ li {
   font-size: 20px;
   display: inline;
   margin: 10px;
+}
+
+header {
+  background: url(https://www.goodfreephotos.com/albums/other-landscapes/mountains-landscape-with-pine-trees.jpg);
+  background-position: center;
+  background-size: cover;
 }
