--- a/src/timer.css
+++ b/src/timer.css
@@ -1,20 +1,17 @@
 button[type="timer"] {
-
   border-radius: 10px;
+  border: 4px solid #5a7ba7;
   background: #282c34;
-  border: 4px solid #3f51b5;
   font-size: 16px;
   padding: 10px 20px;
   width: 200px;
   margin: 10px 10px;
   color: white;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-
 }
 
 h2[type="timer"] {
   font-size: 80px;
-
 }
 
 p[type="timer"] {
@@ -24,4 +21,12 @@ p[type="timer"] {
 
 h1[type="timer"] {
   font-size: 90px;
+}
+
+header[type="timer"] {
+  background: #282c34;
+}
+
+header.App-header {
+  background: #282c34;
 }
