--- a/src/pom.css
+++ b/src/pom.css
@@ -1,28 +1,21 @@
-body {
-  background: #5a7ba7;
-  font-family: "Georgia";
-}
-
 h1 {
   text-align: center;
   font-size: 35px;
   margin: 0px 0px 20px 0px;
+  color: #2b2b11;
 }
 
 h3 {
   font-size: 25px;
   text-align: center;
+  color: white;
 }
 
 p {
   width: 500px;
   margin: auto;
-  font-size: 15px;
-}
-
-p[type="list"] {
-  width: 400px;
-  font-style: italic;
+  font-size: 13px;
+  color: #1e260d;
 }
 
 li {
