--- a/src/Profile.css
+++ b/src/Profile.css
@@ -32,3 +32,8 @@ button {
   color: white;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
+
+div[type="thegraphs"]{
+  display:flex;
+  justify-content: center;
+}
