divided up activity log visually

--- a/src/Profile.css
+++ b/src/Profile.css
@@ -37,3 +37,14 @@ div[type="thegraphs"]{
   display:flex;
   justify-content: center;
 }
+
+div[ type="activities"]{
+  background-color: #5a7ba7;
+  width: 350px;
+}
+
+div[ type="activitiesContain"]{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
